--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "mongodb": "^4.8.1",
     "next": "latest",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1"
   },
   "devDependencies": {
     "@types/node": "18.7.5",
     "@types/react": "16.9.17",
+    "sass": "^1.66.1",
     "typescript": "4.6.3"
   }
 }
