--- a/package.json
+++ b/package.json
@@ -13,9 +13,6 @@
     "react-icons": "^4.10.1"
   },
   "devDependencies": {
-    "@types/node": "18.7.5",
-    "@types/react": "16.9.17",
-    "sass": "^1.66.1",
-    "typescript": "4.6.3"
+    "sass": "^1.66.1"
   }
 }
