--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
     "start": "next start"
   },
   "dependencies": {
-    "mongodb": "^4.8.1",
+    "dotenv": "^16.3.1",
+    "langchain": "^0.0.142",
+    "mongodb": "^5.2.0",
     "next": "latest",
+    "openai": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1"
