--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "@types/node": "^20.5.9",
+    "axios": "^1.5.0",
     "dotenv": "^16.3.1",
     "langchain": "^0.0.142",
     "mongodb": "^5.2.0",
@@ -13,7 +15,8 @@
     "openai": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.10.1"
+    "react-icons": "^4.10.1",
+    "swr": "^2.2.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.15",
