--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   "dependencies": {
     "@types/node": "^20.5.9",
     "axios": "^1.5.0",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
+    "jsonwebtoken": "^9.0.2",
     "langchain": "^0.0.142",
     "mongodb": "^5.2.0",
     "next": "latest",
